// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SqlExpand > basic expand functionality > expand with array of Sql values 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    ?
    /* </query_1> */
,
    /* <query_2> */
    ?
    /* </query_2> */
,
    /* <query_3> */
    ?
    /* </query_3> */
  )
  /* </query_0> */"
`;

exports[`SqlExpand > basic expand functionality > expand with empty array 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN ()
  /* </query_0> */"
`;

exports[`SqlExpand > basic expand functionality > expand with single Sql value 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    ?
    /* </query_1> */
  )
  /* </query_0> */"
`;

exports[`SqlExpand > expand in CRUD operations > expand for INSERT columns 1`] = `
"/* <query_0> */
INSERT INTO
  "main"."account" ("email", "first_name")
VALUES
  (
    /* <query_1> */
    (?, ?)
    /* </query_1> */
,
    /* <query_2> */
    (?, ?)
    /* </query_2> */
  )
  /* </query_0> */"
`;

exports[`SqlExpand > expand in CRUD operations > expand for UPDATE SET clause 1`] = `
"/* <query_0> */
UPDATE "main"."account"
SET
  /* <query_1> */
  "email" = ?
  /* </query_1> */
,
  /* <query_2> */
  "first_name" = ?
  /* </query_2> */
WHERE
  "account"."account_id" = ?
  /* </query_0> */"
`;

exports[`SqlExpand > expand in nested queries > expand in deeply nested subqueries (3 levels) 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    SELECT
      "a_2"."account_id" AS "accountId",
      "a_2"."email"
    FROM
      "main"."account" AS "a_2"
    WHERE
      "a_2"."account_id" IN (
        /* <query_2> */
        SELECT
          "a_3"."account_id" AS "accountId"
        FROM
          "main"."account" AS "a_3"
        WHERE
          "a_3"."account_id" IN (
            /* <query_3> */
            SELECT
              "a_4"."account_id" AS "accountId"
            FROM
              "main"."account" AS "a_4"
            WHERE
              "a_4"."account_id" IN (
                /* <query_4> */
                ?
                /* </query_4> */
,
                /* <query_5> */
                ?
                /* </query_5> */
              )
              /* </query_3> */
          )
          AND "a_3"."status" IN (
            /* <query_6> */
            ?
            /* </query_6> */
,
            /* <query_7> */
            ?
            /* </query_7> */
          )
          /* </query_2> */
      )
      AND "a_2"."email" = ?
      /* </query_1> */
  )
  /* </query_0> */"
`;

exports[`SqlExpand > expand in nested queries > expand in nested subqueries (2 levels) 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    SELECT
      "a_2"."account_id" AS "accountId",
      "a_2"."email"
    FROM
      "main"."account" AS "a_2"
    WHERE
      "a_2"."account_id" IN (
        /* <query_2> */
        SELECT
          "a_3"."account_id" AS "accountId"
        FROM
          "main"."account" AS "a_3"
        WHERE
          "a_3"."status" IN (
            /* <query_3> */
            ?
            /* </query_3> */
,
            /* <query_4> */
            ?
            /* </query_4> */
          )
          /* </query_2> */
      )
      AND "a_2"."email" = ?
      /* </query_1> */
  )
  /* </query_0> */"
`;

exports[`SqlExpand > expand in nested queries > expand in subquery (1 level) 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    SELECT
      "a_2"."account_id" AS "accountId"
    FROM
      "main"."account" AS "a_2"
    WHERE
      "a_2"."account_id" IN (
        /* <query_2> */
        ?
        /* </query_2> */
,
        /* <query_3> */
        ?
        /* </query_3> */
,
        /* <query_4> */
        ?
        /* </query_4> */
      )
      /* </query_1> */
  )
  /* </query_0> */"
`;

exports[`SqlExpand > expand with multiple expand calls > multiple expand in same query 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    ?
    /* </query_1> */
,
    /* <query_2> */
    ?
    /* </query_2> */
  )
  AND "a_1"."status" IN (
    /* <query_3> */
    ?
    /* </query_3> */
,
    /* <query_4> */
    ?
    /* </query_4> */
  )
  /* </query_0> */"
`;

exports[`SqlExpand > expand with multiple expand calls > multiple expand with param references 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    ?
    /* </query_1> */
,
    /* <query_2> */
    ?
    /* </query_2> */
  )
  AND "a_1"."email" = ?
  AND "a_1"."status" IN (
    /* <query_3> */
    ?
    /* </query_3> */
  )
  AND "a_1"."first_name" = ?
  /* </query_0> */"
`;

exports[`SqlExpand > expand with param() references > expand combined with param in same query 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  "a_1"."account_id" IN (
    /* <query_1> */
    ?
    /* </query_1> */
,
    /* <query_2> */
    ?
    /* </query_2> */
  )
  AND "a_1"."email" = ?
  /* </query_0> */"
`;

exports[`SqlExpand > expand with param() references > expand with param references inside handler 1`] = `
"/* <query_0> */
SELECT
  "a_1"."account_id" AS "accountId",
  "a_1"."status",
  "a_1"."email",
  "a_1"."first_name" AS "firstName",
  "a_1"."last_name" AS "lastName",
  "a_1"."notes",
  "a_1"."created_at" AS "createdAt",
  "a_1"."modified_at" AS "modifiedAt",
  "a_1"."parent_id" AS "parentId"
FROM
  "main"."account" AS "a_1"
WHERE
  /* <query_1> */
  "a_1"."email" = ?
  /* </query_1> */
,
  /* <query_2> */
  "a_1"."first_name" = ?
  /* </query_2> */
  /* </query_0> */"
`;
